--- a/css/main.css
+++ b/css/main.css
@@ -136,8 +136,10 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 100vh;
-  width: 100vh;
+  height: 90vh; 
+  width: 90vw;  
+  max-width: 1500px;
+  max-height: 700px; 
   border: #000000;
 }
 
