--- a/css/main.css
+++ b/css/main.css
@@ -136,10 +136,8 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  height: 90vh; 
-  width: 90vw;  
-  max-width: 1500px;
-  max-height: 700px; 
+  height: 100vh;
+  width: 100vh;
   border: #000000;
 }
 
